--- a/css/question.css
+++ b/css/question.css
@@ -1,17 +1,44 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.header {
-  background-color: #464646;
-  height: 90px;
+.question-page {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
-.logo {
-  height: 80px;
+.question-img {
+  height: 250px;
   width: auto;
+  margin-top: 40px;
+}
+
+.question-info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.qstn-txt {
+  margin: 0;
+  color: black;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.all-answers {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.answer-card {
+  background-color: #7b6c8d;
+  height: 80px;
+  width: 500px;
+}
+
+.answer {
+  margin: 0;
+  color: white;
 }
