--- a/css/question.css
+++ b/css/question.css
@@ -36,9 +36,34 @@
   background-color: #7b6c8d;
   height: 80px;
   width: 500px;
+  display: flex;
+  align-items: center;
+}
+
+.answer-card:hover {
+  cursor: pointer;
+  scale: 1.02;
+  transition: 0.2s;
 }
 
 .answer {
   margin: 0;
   color: white;
+  padding: 10px;
+  max-width: fit-content;
+}
+
+.button {
+  width: 100px;
+  background-color: #009de0;
+  border: none;
+  color: white;
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.button:hover {
+  cursor: pointer;
+  background-color: #017db3;
+  transition: 0.2s;
 }
