--- a/css/question.css
+++ b/css/question.css
@@ -38,6 +38,7 @@
   width: 500px;
   display: flex;
   align-items: center;
+  filter: drop-shadow(black 0px 1px 2px);
 }
 
 .answer-card:hover {
@@ -60,6 +61,7 @@
   color: white;
   padding: 10px;
   margin-top: 20px;
+  filter: drop-shadow(black 0px 1px 1px);
 }
 
 .button:hover {
