--- a/css/results.css
+++ b/css/results.css
@@ -44,3 +44,18 @@
   margin: 0;
   font-size: 50px;
 }
+
+.retake-btn {
+  width: 130px;
+  background-color: #009de0;
+  border: none;
+  color: white;
+  padding: 10px;
+  filter: drop-shadow(black 0px 1px 1px);
+}
+
+.retake-btn:hover {
+  cursor: pointer;
+  background-color: #017db3;
+  transition: 0.2s;
+}
